# ParticlesSimulation

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: Callbacks.h  Particle.h  ParticleFrameData.h  ParticlesRenderer.h
include/Utils/: FileUtils.h  ShaderUtils.h
shaders/: compute_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  Main.cpp  Particle.h  ParticleFrameData.h  ParticlesRenderer.cpp  ParticlesRenderer.h  ParticlesSimulator.h
src/Utils/: FileUtils.cpp  FileUtils.h  ShaderUtils.cpp  ShaderUtils.h
tests/: CMakeLists.txt
